--- a/draft/bachelorproef.tex
+++ b/draft/bachelorproef.tex
@@ -251,7 +251,7 @@ Het doel van het onderzoek is enerzijds inzicht te krijgen in de werking van adb
 
 \chapter{Wat is een adblocker}
 \label{ch:Wat is een adblocker}
-De term ad blocker is de overkoepelende term voor alle soorten software die advertenties verwijderen op een webpagina. Het blokkeren van advertenties zorgt niet alleen voor dat de gebruiker een aangenamere ervaring heeft. Een ad blocker zorgt er ook voor dat webpagina's sneller geladen worden. 
+De term ad blocker is de overkoepelende term voor alle soorten software die advertenties verwijderen op een webpagina. Het blokkeren van advertenties zorgt niet alleen voor dat de gebruiker een aangenamere ervaring heeft. Een ad blocker zorgt er ook voor dat webpagina's sneller geladen worden. Doordat reclame wordt geblokkeerd zullen reclame bedrijven ook minder informatie over je ter beschikking hebben. Met als gevold dat de privacy beter wordt beschermd. Sommige ad blockers zoals Ghostery gaan nog verder en laten toe om trackers te blokkeren. Het blokkeren van trackers zorgt ervoor dat het moeilijker om gevolgd te worden wat opnieuw bijdraagt tot het beschermen van de privacy.
 
 \chapter{Hoe werkt een adblocker}
 \label{ch:Hoe werkt een adblocker}
