--- a/draft/tin-bachproef.bib
+++ b/draft/tin-bachproef.bib
@@ -24,3 +24,23 @@
   year = {2009}
 }
 
+@online{Chromeappstore2016,
+	url={https://chrome.google.com/webstore/search/ad%20block?utm_source=chrome-ntp-icon&_category=extensions},
+	key={ChromeAppStore},
+	year={2016}
+
+}
+
+@online{Mozillappstore2016,
+	url={https://addons.mozilla.org/nl/firefox/extensions/?sort=users},
+	key={Mozillappstore},
+	year={2016}
+}
+
+@online{PerformanceAB,
+  author = {Firefoxcvp},
+  title = {Best Ad Blocker tested for performance},
+  year = {2015},
+  url = {http://firefoxcvp.com/best-ad-blocker-tested-for-performance/},
+  urldate = {2016-23-03}
+}
