--- a/draft/tin-bachproef.bib
+++ b/draft/tin-bachproef.bib
@@ -44,3 +44,18 @@
   url = {http://firefoxcvp.com/best-ad-blocker-tested-for-performance/},
   urldate = {2016-23-03}
 }
+
+@article{PageFair2015,
+	author={PageFairTeam},
+	title={The cost of ad blocking},
+	year={2015},
+	url={https://blog.pagefair.com/2015/ad-blocking-report/},
+	
+}
+@article{PageFair2014,
+	author={PageFairTeam},
+	title={The cost of ad blocking},
+	year={2014},
+	url={https://blog.pagefair.com/2014/adblocking-report/},
+
+}
