--- a/draft/tin-bachproef.bib
+++ b/draft/tin-bachproef.bib
@@ -59,3 +59,56 @@
 	url={https://blog.pagefair.com/2014/adblocking-report/},
 
 }
+@article{Chaffey2016,
+  author = {Chaffey, Dave},
+  journal = {smartinsights},
+  title = {{Display advertising clickthrough rates
+}},
+  year = {2016}
+}
+@book{Silverman2015,
+ author = {Silverman, David},
+ title = {Internet Advertising Revenue Report},
+ year = {2015},
+ publisher = {Internet Advertising Bureau},
+}
+@article{BI-Insider2016,
+  author = {Hoelzel, Mark},
+  journal = {Business Insider, UK},
+  title = {The us digital media ad spend report},
+  year = {2016}
+}
+@article{EMarketer2016,
+  author = {eMarketer, E},
+  journal = {eMarketer},
+  title = {Digital Ad Spending to Surpass TV Next Year
+},
+  year = {2016}
+}
+@article{pwc2015,
+  author = {Hobbs,Matthew},
+  journal = {pwc},
+  title = {internet-advertising insights
+},
+  year = {2015}
+}
+@article{IAB2014,
+  author = {Friend,B},
+  journal = {IAB},
+  title = {IAB Ad Blocking Study
+},
+  year = {2014}
+}
+@book{Fraser2015,
+ author = {Malcolm, Toms},
+ title = {Adblock Plus Efficacy Study},
+ year = {2015},
+ publisher = {Simon Frazer University},
+}
+@article{nytimes2015,
+  author = {GREGOR AISCH{,} WILSON ANDREWS{,}JOSH KELLER },
+  journal = {IAB},
+  title = {The Cost of Mobile Ads on News Websites
+},
+  year = {2015}
+}
